working on j2 report

--- a/report.yml
+++ b/report.yml
@@ -94,7 +94,7 @@
             ===[{{inventory_hostname}} Device Report]===
                Date/Time:  {{ date_time_stamp }}
                
-            ===[Vital Information]===
+            ===[Device Information]===
             - Hostname: {{ansible_net_hostname}}
             - Management IP: {{ansible_host}}
             - Model: {{ansible_net_model}}
